# MPIRUN_demo

./: CMakeLists.txt  README.md
src/: Application.cpp  Application.h  CMakeLists.txt  Process.cpp  Process.h  ProcessGroup.cpp  ProcessGroup.h  ProcessManager.cpp  ProcessManager.h  global.h  main.cpp
test/: CMakeLists.txt  test_fork.cpp
